--- a/flashPrice/flashPrice/flashPrice.csproj
+++ b/flashPrice/flashPrice/flashPrice.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.11.46.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.46\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -68,6 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\main.css" />
+    <Content Include="assets\images\alfamart_logo.png" />
+    <Content Include="assets\images\flashPriceLogo.png" />
+    <Content Include="assets\images\indomaret_logo.png" />
     <Content Include="assets\images\Searchs_004.png" />
     <Content Include="assets\images\viki-mohamad-tWXH_zGJrPo-unsplash.jpg" />
     <Content Include="assets\js\extention\choices.js" />
