--- a/flashPrice/flashPrice/bin/flashPrice.dll.config
+++ b/flashPrice/flashPrice/bin/flashPrice.dll.config
@@ -7,7 +7,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-  </system.web>
+  <pages>
+      <controls>
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+        <add tagPrefix="act" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit" />
+      </controls>
+    </pages></system.web>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
@@ -16,14 +21,15 @@
   </system.codedom>
   
   <appSettings>
-    <add key="isThisServerIsDebugging" value="true"/>
+    <add key="isThisServerIsDebugging" value="true" />
 
     <add key="ServerflashPrice" value="TRYHARTONOLIE-P" />
     <add key="DatabaseflashPrice" value="flashPriceDB" />
     <add key="DBUserNameflashPrice" value="devinaWinaya" />
     <add key="DBPasswordflashPrice" value="Tanakakou369" />
     <add key="DBAppNameflashPrice" value="flashPrice" />
-    
+
+
 
     <add key="BackendAPIKey" value="01234567890" />
     <add key="AuthToken_clientID" value="mHCPLUS.Demo" />
