--- a/flashPrice/flashPrice/flashPrice.csproj
+++ b/flashPrice/flashPrice/flashPrice.csproj
@@ -158,12 +158,21 @@
     <Content Include="assets\js\extention\custom-materialize.js" />
     <Content Include="assets\js\extention\flatpickr.js" />
     <Content Include="assets\js\main.js" />
+    <Content Include="default.aspx" />
     <Content Include="home.aspx" />
     <Content Include="login.aspx" />
     <Content Include="Web.config" />
+    <Content Include="webService\wsvMiniMarket.asmx" />
     <Content Include="webService\wsvProduct.asmx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="default.aspx.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="default.aspx.designer.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -193,6 +202,10 @@
       <DependentUpon>home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="webService\wsvMiniMarket.asmx.cs">
+      <DependentUpon>wsvMiniMarket.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="webService\wsvProduct.asmx.cs">
       <DependentUpon>wsvProduct.asmx</DependentUpon>
       <SubType>Component</SubType>
