--- a/flashPrice/flashPrice/flashPrice.csproj
+++ b/flashPrice/flashPrice/flashPrice.csproj
@@ -1840,6 +1840,7 @@
     <Content Include="assets\images\girl_sit_too.png" />
     <Content Include="assets\images\Image_not_available.png" />
     <Content Include="assets\images\indomaret_logo.png" />
+    <Content Include="assets\images\Sari-Roti.png" />
     <Content Include="assets\images\Searchs_004.png" />
     <Content Include="assets\images\team_work.png" />
     <Content Include="assets\images\viki-mohamad-tWXH_zGJrPo-unsplash.jpg" />
