--- a/flashPrice/flashPrice/Web.config
+++ b/flashPrice/flashPrice/Web.config
@@ -22,20 +22,12 @@
   
   <appSettings>
     <add key="isThisServerIsDebugging" value="true" />
-
-    <add key="ServerflashPrice" value="TRYHARTONOLIE-P" />
+    
+    <add key="ServerflashPrice" value="DESKTOP-0SQJJ5C" />
     <add key="DatabaseflashPrice" value="flashPriceDB" />
     <add key="DBUserNameflashPrice" value="devinaWinaya" />
-    <add key="DBPasswordflashPrice" value="Tanakakou369" />
+    <add key="DBPasswordflashPrice" value="123456" />
     <add key="DBAppNameflashPrice" value="flashPrice" />
-
-    <add key="BackendAPIKey" value="01234567890" />
-    <add key="AuthToken_clientID" value="mHCPLUS.Demo" />
-    <add key="AuthToke_siteKey" value="EAAAACx2e7wvVRxFlMEvCWH0m903Zw9ChEDrRdr8OM28Kuin" />
-    <add key="AuthToken_AuthenticateAPI" value="http://auth-hcplus.klgsys.com/api/client/authenticate" />
-    <add key="AuthToken_RefreshTokenAPI" value="http://auth-hcplus.klgsys.com/api/client/refreshtoken" />
-    <add key="AuthToken_ValidateTokenAPI" value="http://auth-hcplus.klgsys.com/api/client/validatetoken" />
-
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
