--- a/flashPrice/flashPrice/Web.config
+++ b/flashPrice/flashPrice/Web.config
@@ -23,8 +23,8 @@
   <appSettings>
     <add key="isThisServerIsDebugging" value="true" />
     
-    <add key="ServerflashPrice" value="DESKTOP-0SQJJ5C" />
-    <add key="DatabaseflashPrice" value="flashPriceDB" />
+    <add key="ServerflashPrice" value="DESKTOP-0SQJJ5C" /> <!-- ganti bagian apa disini -->
+    <add key="DatabaseflashPrice" value="flashPriceDB" /> 
     <add key="DBUserNameflashPrice" value="devinaWinaya" />
     <add key="DBPasswordflashPrice" value="123456" />
     <add key="DBAppNameflashPrice" value="flashPrice" />
